[fix] fixed overflow issue on edit page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -59,6 +59,7 @@ html {
     /*padding: 40px;*/
     /*height: 320px;*/
     text-align: center;
+    margin: auto;
 }
 
 .contact-text{
@@ -892,6 +893,12 @@ p.lp{
 .ops-div {
     padding-right: 55px;
     margin: 10px;
+    float: left;
+}
+
+.editSection {
+    text-align: center;
+    overflow: hidden;
 }
 
 .editPlaceholder {
